Daily_Report/build_2026-04-21_run252-1_main.log
  File "/home/runner/work/Stock_Bot_2/Stock_Bot_2/Main.py", line 264
    💳 <b>信用卡繳款日提醒</b>
    ^
SyntaxError: invalid character '💳' (U+1F4B3)
